fixed spacing issue between pic project and header on main page

--- a/css/style.css
+++ b/css/style.css
@@ -189,8 +189,8 @@ p{
     z-index: 1;
 }
 
-.project h1, h2, h3, h4, p{
-	margin: 0.5em 0 0.5em 0;
+.project h1, h2, h3, h4, p, img{
+	margin: 0.5rem 0 0.5rem 0;
 	padding: 0;
 }
 
